Query y mostrar los tweet con coordinates

--- a/twitterPolling/templates/index.html
+++ b/twitterPolling/templates/index.html
@@ -1,1 +1,8 @@
 HELLOWORLD
+<ul>
+{% for tweet in tweets %}
+<!-- 		{% if tweet.coordinates %} -->
+        	<li><a>{{tweet.coordinates}}</a></li>
+<!--         {% endif %} -->
+{% endfor %}
+</ul>
