--- a/twitterPolling/templates/index.html
+++ b/twitterPolling/templates/index.html
@@ -14,16 +14,22 @@
         <p></p>
     </div>
     <div class="jumbotron">
-        <h1>twitterPolling</h1>
-        <!--<p><a class="btn btn-primary btn-lg" href="#">Buscar!</a></p>-->
+        <h1>{{ text }}</h1> <h4>cerca de Buenos Aires</h4>
     </div>
 
-    <!-- Prueba de un mapa -->
-    <h3>Mapa Leaflet</h3>
+    <form method="POST" action="/searchText/">
+        <div class="form-group">
+            {% csrf_token %}
+            <input type="text" name="textfield">
+            <button class="btn btn-primary" type="submit">Buscar!</button>
+        </div>
+    </form>
+
+    <h3>Mapa de Tweets</h3>
     <div id="map" style="width: 1000px; height: 600px"></div>
 
     <script>
-        var map = L.map('map').setView([-34.575814, -58.475386], 11);
+        var map = L.map('map').setView([-34.613864, -58.444999], 12);
         L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
             attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
             maxZoom: 18,
@@ -32,25 +38,23 @@
         }).addTo(map);
     </script>
 
-
-    <h3>Tweets Georeferenciados</h3>
+    <h3>Listado de Tweets</h3>
     <div class="container">
         <ul>
             {% for tweet in tweets %}
                 <script>
                     var marker = L.marker([{{tweet.geo.coordinates.0}}, {{tweet.geo.coordinates.1}}]).addTo(map);
                     var popup = L.popup().setContent('<div class="container">' +
-                        '<p>{{tweet.text}}</p>' +
                         '<img src="{{tweet.user.profile_image_url_https}}">' +
+                        '<lu><li>{{tweet.user.name}}</li>' +
+                        '<li><p>{{tweet.text}}</p><li></lu>' +
                         '</div>');
                     marker.bindPopup(popup);
                 </script>
-                <ul>
-                    <img src="{{tweet.user.profile_image_url_https}}">
-                    <li>{{tweet.user.name}}</li>
-                    <li><a>Posición: {{tweet.geo.coordinates.0}},{{tweet.geo.coordinates.1}}</a></li>
-                    <li>{{tweet.text}}</li>
-                </ul>
+                <img src="{{tweet.user.profile_image_url_https}}">
+                <li>{{tweet.user.name}}</li>
+                <li><a>Posición: {{tweet.geo.coordinates.0}},{{tweet.geo.coordinates.1}}</a></li>
+                <li>{{tweet.text}}</li>
                 </br>
             {% endfor %}
         </ul>
