--- a/twitterPolling/templates/index.html
+++ b/twitterPolling/templates/index.html
@@ -1,64 +1,54 @@
 {% load staticfiles %}
 <html xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
-    <title>twitterPolling</title>
-    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" media="screen">
-    <link rel="stylesheet" href="{% static 'leaflet.css' %}" />
-    <script src="{% static 'leaflet.js' %}"></script>
-    <script src="{% static 'twitter.js' %}"></script>
+	<meta charset="UTF-8">
+	<title>twitterPolling</title>
+	<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" media="screen">
+	<link rel="stylesheet" href="{% static 'leaflet.css' %}" />
+	<script src="{% static 'leaflet.js' %}"></script>
+	<script src="{% static 'twitter.js' %}"></script>
 </head>
 <body>
-<div class="container">
-    <div class="container">
-        <p></p>
-    </div>
-    <div class="jumbotron">
-        <h1>{{ text }}</h1> <h4>cerca de Buenos Aires</h4>
-    </div>
+	<div class="container">
+		<div class="container">
+			<p></p>
+		</div>
+		<div class="jumbotron">
+			<h1>{{ text }}</h1> <h4>cerca de Buenos Aires</h4>
+		</div>
 
-    <form method="POST" action="/searchText/">
-        <div class="form-group">
-            {% csrf_token %}
-            <input type="text" name="textfield">
-            <button class="btn btn-primary" type="submit">Buscar!</button>
-        </div>
-    </form>
+		<form method="POST" action="/searchText/">
+			<div class="form-group">
+				{% csrf_token %}
+				<input type="text" name="textfield">
+				<button class="btn btn-primary" type="submit">Buscar!</button>
+			</div>
+		</form>
 
-    <h3>Mapa de Tweets</h3>
-    <div id="map" style="width: 1000px; height: 600px"></div>
+		<h3>Mapa de Tweets</h3>
+		<div id="map" style="width: 1000px; height: 600px"></div>
 
-    <script>
-        var map = L.map('map').setView([-34.613864, -58.444999], 12);
-        L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-            attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-            maxZoom: 18,
-            id: 'francoroman.cif6y5apf0sufs5ktwl0j56l1',
-            accessToken: 'pk.eyJ1IjoiZnJhbmNvcm9tYW4iLCJhIjoiY2lmNnk1Ynl2MGxpYnRxbTV5dWQ4cHpveCJ9.0AvZR59EKIGrOwWbzkhJMw'
-        }).addTo(map);
-    </script>
+		<script>
+		var map = L.map('map').setView([-34.613864, -58.444999], 12);
+		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+			maxZoom: 18,
+			id: 'francoroman.cif6y5apf0sufs5ktwl0j56l1',
+			accessToken: 'pk.eyJ1IjoiZnJhbmNvcm9tYW4iLCJhIjoiY2lmNnk1Ynl2MGxpYnRxbTV5dWQ4cHpveCJ9.0AvZR59EKIGrOwWbzkhJMw'
+		}).addTo(map);
+		</script>
 
-    <h3>Listado de Tweets</h3>
-    <div class="container">
-        <ul>
-            {% for tweet in tweets %}
-                <script>
-                    var marker = L.marker([{{tweet.geo.coordinates.0}}, {{tweet.geo.coordinates.1}}]).addTo(map);
-                    var popup = L.popup().setContent('<div class="container">' +
-                        '<img src="{{tweet.user.profile_image_url_https}}">' +
-                        '<lu><li>{{tweet.user.name}}</li>' +
-                        '<li><p>{{tweet.text}}</p><li></lu>' +
-                        '</div>');
-                    marker.bindPopup(popup);
-                </script>
-                <img src="{{tweet.user.profile_image_url_https}}">
-                <li>{{tweet.user.name}}</li>
-                <li><a>Posición: {{tweet.geo.coordinates.0}},{{tweet.geo.coordinates.1}}</a></li>
-                <li>{{tweet.text}}</li>
-                </br>
-            {% endfor %}
-        </ul>
-    </div>
+		<h3>Listado de Tweets</h3>
+		<div class="container">
+			<ul>
+				{% for tweet in tweets %}
+				
+				{% block twit %}{% endblock %}
+			</br>
+
+			{% endfor %}
+		</ul>
+	</div>
 
 </div>
 </body>
