Mejora en el codigo, ahora hace N querys y guarda en un csv

--- a/twitterPolling/templates/index.html
+++ b/twitterPolling/templates/index.html
@@ -10,6 +10,8 @@
 		<h1>{{ text }}</h1> <h4>cerca de Buenos Aires</h4>
 	</div>
 
+	<a href="/download_csv/">Descargar en CSV!</a>
+
 	<form method="POST" action="/searchText/">
 		<div class="form-group">
 			{% csrf_token %}
