--- a/stylesheets/categories.css
+++ b/stylesheets/categories.css
@@ -48,3 +48,26 @@ div.tooltip {
     opacity: 0.9;
     position: absolute;
 }
+
+.background {
+  fill: none;
+  pointer-events: all;
+}
+
+#states {
+  fill: #aaa;
+}
+
+
+#states .active {
+  fill: orange;
+}
+
+#state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
